apps/nextcloud/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  type: NodePort
  selector:
    app: nextcloud
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
